Allow user selection of domain extensions
